Update usage instructions in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Funciona diretamente no navegador, sem necessidade de instalar aplicativos.
 
 <h2>Como usar</h2>
 <ul>
-  <li>Aperte o play e deixe a música tocar</li>
+  <li>Aperter cu de ariel pra ouvir o som kkakkaka</li>
   <li>Funciona no celular e computador</li>
   <li>Pode ser adicionado à tela inicial como aplicativo</li>
 </ul>
