--- a/index.html
+++ b/index.html
@@ -1,78 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Minha IA + Vídeos</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>IA + Vídeos</title>
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: #fff;
-      margin: 0;
-    }
-    header {
-      background: #020617;
-      padding: 15px;
-      text-align: center;
-      font-size: 20px;
-      font-weight: bold;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      background: #020617;
-      padding: 10px;
-    }
-    nav button {
-      background: #38bdf8;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .section {
-      display: none;
-      padding: 15px;
-    }
-    .active {
-      display: block;
-    }
-    .chat {
-      height: 60vh;
-      overflow-y: auto;
-    }
-    .msg {
-      margin-bottom: 10px;
-    }
-    .user {
-      text-align: right;
-      color: #38bdf8;
-    }
-    .bot {
-      text-align: left;
-      color: #a7f3d0;
-    }
-    footer {
-      display: flex;
-      padding: 10px;
-      background: #020617;
-    }
-    input {
-      flex: 1;
-      padding: 10px;
-      border-radius: 5px;
-      border: none;
-    }
-    iframe {
-      width: 100%;
-      height: 200px;
-      border-radius: 10px;
-      margin-bottom: 15px;
-    }
-  </style>
+<style>
+body{
+  margin:0;
+  font-family: Arial, sans-serif;
+  background:#0f172a;
+  color:#fff;
+}
+header{
+  background:#020617;
+  padding:15px;
+  text-align:center;
+  font-size:20px;
+  font-weight:bold;
+}
+nav{
+  display:flex;
+  justify-content:center;
+  gap:10px;
+  padding:10px;
+  background:#020617;
+}
+button{
+  padding:10px 15px;
+  border:none;
+  border-radius:6px;
+  cursor:pointer;
+  background:#38bdf8;
+  font-weight:bold;
+}
+.section{
+  display:none;
+  padding:15px;
+}
+.section.active{
+  display:block;
+}
+.chat{
+  height:55vh;
+  overflow-y:auto;
+  border:1px solid #334155;
+  padding:10px;
+  border-radius:8px;
+}
+.msg{
+  margin-bottom:10px;
+}
+.user{
+  text-align:right;
+  color:#38bdf8;
+}
+.bot{
+  text-align:left;
+  color:#a7f3d0;
+}
+.input-area{
+  display:flex;
+  margin-top:10px;
+}
+input{
+  flex:1;
+  padding:10px;
+  border-radius:5px;
+  border:none;
+}
+iframe{
+  width:100%;
+  height:220px;
+  border-radius:10px;
+  margin-bottom:15px;
+}
+</style>
 </head>
 
 <body>
@@ -80,51 +83,76 @@
 <header>🤖 Minha IA + 🎥 Vídeos</header>
 
 <nav>
-  <button onclick="mostrar('ia')">IA</button>
-  <button onclick="mostrar('videos')">Vídeos</button>
+  <button onclick="abrirIA()">IA</button>
+  <button onclick="abrirVideos()">Vídeos</button>
 </nav>
 
-<!-- SEÇÃO IA -->
+<!-- IA -->
 <div id="ia" class="section active">
-  <div class="chat" id="chat">
-    <div class="msg bot">Olá 👋 Eu sou sua IA. Pergunte algo!</div>
+  <div id="chat" class="chat">
+    <div class="msg bot">Olá 👋 Sou sua IA. Digite algo!</div>
   </div>
 
-  <footer>
-    <input type="text" id="input" placeholder="Digite sua pergunta...">
+  <div class="input-area">
+    <input id="texto" placeholder="Digite aqui...">
     <button onclick="enviar()">Enviar</button>
-  </footer>
+  </div>
 </div>
 
-<!-- SEÇÃO VÍDEOS -->
+<!-- VÍDEOS -->
 <div id="videos" class="section">
-  <h2>🎬 Vídeos Recomendados</h2>
+  <h2>🎬 Vídeos do YouTube</h2>
 
-  <!-- TROQUE OS IDS DOS VÍDEOS -->
   <iframe src="https://www.youtube.com/embed/jfKfPfyJRdk" allowfullscreen></iframe>
   <iframe src="https://www.youtube.com/embed/5qap5aO4i9A" allowfullscreen></iframe>
   <iframe src="https://www.youtube.com/embed/DWcJFNfaw9c" allowfullscreen></iframe>
-
 </div>
 
 <script>
-  function mostrar(id) {
-    document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-    document.getElementById(id).classList.add('active');
-  }
+function abrirIA(){
+  document.getElementById("ia").classList.add("active");
+  document.getElementById("videos").classList.remove("active");
+}
 
-  function enviar() {
-    const input = document.getElementById("input");
-    const texto = input.value.trim();
-    if (!texto) return;
+function abrirVideos(){
+  document.getElementById("videos").classList.add("active");
+  document.getElementById("ia").classList.remove("active");
+}
 
-    addMsg(texto, "user");
-    input.value = "";
+function enviar(){
+  let input = document.getElementById("texto");
+  let msg = input.value.trim();
+  if(msg === "") return;
 
-    setTimeout(() => {
-      addMsg(responder(texto), "bot");
-    }, 500);
-  }
+  addMsg(msg, "user");
+  input.value = "";
 
-  function addMsg(texto, tipo) {
-    const chat = document.getEle
+  setTimeout(()=>{
+    addMsg(responder(msg), "bot");
+  },500);
+}
+
+function addMsg(texto, tipo){
+  let chat = document.getElementById("chat");
+  let div = document.createElement("div");
+  div.className = "msg " + tipo;
+  div.innerText = texto;
+  chat.appendChild(div);
+  chat.scrollTop = chat.scrollHeight;
+}
+
+function responder(msg){
+  msg = msg.toLowerCase();
+
+  if(msg.includes("oi")) return "Oi 😄 Como posso ajudar?";
+  if(msg.includes("vídeo")) return "Clique na aba Vídeos 🎥";
+  if(msg.includes("ia")) return "Sou uma IA simples rodando no navegador.";
+  if(msg.includes("dinheiro")) return "Você pode monetizar com anúncios.";
+  if(msg.includes("amor")) return "O amor move tudo ❤️";
+
+  return "Interessante 🤔 Me fale mais.";
+}
+</script>
+
+</body>
+</html>
