--- a/index.html
+++ b/index.html
@@ -3,155 +3,150 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>IA + Vídeos</title>
-<iframe src="https://youtu.be/2_c2cwq_4hw?si=an9cRpbOhWljOyuo"></iframe>
-  
+<title>🌸 Vídeos Fofinhos</title>
+
 <style>
 body{
   margin:0;
-  font-family: Arial, sans-serif;
-  background:#0f172a;
+  font-family: "Comic Sans MS", Arial, sans-serif;
+  background-image: url("https://images.unsplash.com/photo-1503264116251-35a269479413");
+  background-size: cover;
+  background-position: center;
+  min-height:100vh;
   color:#fff;
 }
+
+/* camada escura pra leitura */
+.overlay{
+  background: rgba(0,0,0,0.55);
+  min-height:100vh;
+}
+
 header{
-  background:#020617;
-  padding:15px;
   text-align:center;
-  font-size:20px;
-  font-weight:bold;
+  padding:20px;
+  font-size:24px;
+  background: rgba(255,182,193,0.25);
+  backdrop-filter: blur(5px);
 }
-nav{
-  display:flex;
-  justify-content:center;
-  gap:10px;
-  padding:10px;
-  background:#020617;
-}
-button{
-  padding:10px 15px;
-  border:none;
-  border-radius:6px;
-  cursor:pointer;
-  background:#38bdf8;
-  font-weight:bold;
-}
-.section{
-  display:none;
+
+.container{
   padding:15px;
+  max-width:500px;
+  margin:auto;
 }
-.section.active{
-  display:block;
+
+/* CAIXA FOFA */
+.card{
+  background: rgba(255,255,255,0.15);
+  border-radius:20px;
+  padding:15px;
+  backdrop-filter: blur(6px);
+  box-shadow: 0 10px 25px rgba(0,0,0,0.3);
 }
-.chat{
-  height:55vh;
-  overflow-y:auto;
-  border:1px solid #334155;
-  padding:10px;
-  border-radius:8px;
-}
-.msg{
-  margin-bottom:10px;
-}
-.user{
-  text-align:right;
-  color:#38bdf8;
-}
-.bot{
-  text-align:left;
-  color:#a7f3d0;
-}
-.input-area{
-  display:flex;
-  margin-top:10px;
-}
+
+/* INPUT */
 input{
-  flex:1;
-  padding:10px;
-  border-radius:5px;
+  width:100%;
+  padding:12px;
+  border-radius:15px;
   border:none;
+  margin-bottom:12px;
+  font-size:16px;
 }
+
+/* BOTÕES FOFOS */
+.buttons{
+  display:flex;
+  gap:10px;
+  flex-wrap:wrap;
+}
+
+button{
+  flex:1;
+  min-width:120px;
+  padding:12px;
+  border:none;
+  border-radius:18px;
+  font-size:16px;
+  cursor:pointer;
+  background: linear-gradient(135deg,#ffb6c1,#dda0dd);
+  color:#000;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+button:hover{
+  transform: scale(1.07);
+  box-shadow: 0 6px 15px rgba(0,0,0,0.4);
+}
+
+/* PLAYER */
 iframe{
   width:100%;
   height:220px;
-  border-radius:10px;
-  margin-bottom:15px;
+  border-radius:20px;
+  border:none;
+  margin-top:15px;
+}
+
+/* TÍTULO FOFO */
+h2{
+  text-align:center;
+  margin-bottom:10px;
 }
 </style>
 </head>
 
 <body>
+<div class="overlay">
 
-<header>🤖 Minha IA + 🎥 Vídeos</header>
+<header>🌸 Cantinho Fofo de Vídeos 🌸</header>
 
-<nav>
-  <button onclick="abrirIA()">IA</button>
-  <button onclick="abrirVideos()">Vídeos</button>
-</nav>
+<div class="container">
+  <div class="card">
+    <h2>🎀 Cole o link do YouTube</h2>
 
-<!-- IA -->
-<div id="ia" class="section active">
-  <div id="chat" class="chat">
-    <div class="msg bot">Olá 👋 Sou sua IA. Digite algo!</div>
-  </div>
+    <input id="link" placeholder="https://www.youtube.com/watch?v=...">
 
-  <div class="input-area">
-    <input id="texto" placeholder="Digite aqui...">
-    <button onclick="enviar()">Enviar</button>
+    <div class="buttons">
+      <button onclick="carregar()">🐰 Assistir</button>
+      <button onclick="lofi()">🎧 Lo-fi</button>
+      <button onclick="anime()">🌸 Anime</button>
+    </div>
+
+    <iframe id="player" allowfullscreen></iframe>
   </div>
 </div>
 
-<!-- VÍDEOS -->
-<div id="videos" class="section">
-  <h2>🎬 Vídeos do YouTube</h2>
-
-  <iframe src="https://www.youtube.com/embed/jfKfPfyJRdk" allowfullscreen></iframe>
-  <iframe src="https://www.youtube.com/embed/5qap5aO4i9A" allowfullscreen></iframe>
-  <iframe src="https://www.youtube.com/embed/DWcJFNfaw9c" allowfullscreen></iframe>
 </div>
 
 <script>
-function abrirIA(){
-  document.getElementById("ia").classList.add("active");
-  document.getElementById("videos").classList.remove("active");
+function carregar(){
+  let url = document.getElementById("link").value.trim();
+  if(!url) return alert("Cole um link 💖");
+
+  let id = "";
+
+  if(url.includes("watch?v=")){
+    id = url.split("watch?v=")[1].split("&")[0];
+  } else if(url.includes("youtu.be/")){
+    id = url.split("youtu.be/")[1].split("?")[0];
+  }
+
+  if(!id) return alert("Link inválido 😢");
+
+  document.getElementById("player").src =
+    "https://www.youtube.com/embed/" + id;
 }
 
-function abrirVideos(){
-  document.getElementById("videos").classList.add("active");
-  document.getElementById("ia").classList.remove("active");
+function lofi(){
+  document.getElementById("player").src =
+    "https://www.youtube.com/embed/jfKfPfyJRdk";
 }
 
-function enviar(){
-  let input = document.getElementById("texto");
-  let msg = input.value.trim();
-  if(msg === "") return;
-
-  addMsg(msg, "user");
-  input.value = "";
-
-  setTimeout(()=>{
-    addMsg(responder(msg), "bot");
-  },500);
-}
-
-function addMsg(texto, tipo){
-  let chat = document.getElementById("chat");
-  let div = document.createElement("div");
-  div.className = "msg " + tipo;
-  div.innerText = texto;
-  chat.appendChild(div);
-  chat.scrollTop = chat.scrollHeight;
-}
-
-function responder(msg){
-  msg = msg.toLowerCase();
-
-  if(msg.includes("oi")) return "Oi 😄 Como posso ajudar?";
-  if(msg.includes("vídeo")) return "Clique na aba Vídeos 🎥";
-  if(msg.includes("ia")) return "Sou uma IA simples rodando no navegador.";
-  if(msg.includes("dinheiro")) return "Você pode monetizar com anúncios.";
-  if(msg.includes("amor")) return "O amor move tudo ❤️";
-
-  return "Interessante 🤔 Me fale mais.";
+function anime(){
+  document.getElementById("player").src =
+    "https://www.youtube.com/embed/DWcJFNfaw9c";
 }
 </script>
 
